--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <!-- ------ Open Sans google fonts ------ -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap&subset=vietnamese"
+      rel="stylesheet"
+    />
     <!-- ---------- material icons ---------- -->
     <link
       rel="stylesheet"
