--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+
     <title>React App</title>
   </head>
   <body>
@@ -50,5 +51,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="https://kit.fontawesome.com/735e2c8164.js"></script>
   </body>
 </html>
